# AlgoTrade321

./: .flake8  .gitignore  README.md  pyproject.toml
core/: data.csv  main.py
core/core/: arch.py  garch.py
core/core/basic_variables/: constants.py  gaussian_noise.py  variance.py
core/tests/: test_arch.py  test_arch_methods.py  test_garch.py  test_garch_methods.py
